# discord-chatgpt-bot

./: Dockerfile  LICENSE  README.md  config.yaml.sample  db.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml
systemd/: discord-chatgpt-bot.service
